@@ -7,7 +7,6 @@ import java.util.Collection;
 import java.util.LinkedList;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.smt.SolverTypeCollection;
 import de.uka.ilkd.key.smt.solvertypes.SolverType;
@@ -95,7 +94,7 @@ public final class ProofIndependentSMTSettings extends AbstractSettings {
         // Z3_CE solver should not be a usable solver union or part of any as it is
         // treated separately.
         for (SolverType type : nonLegacyTypes.stream().filter(t -> t != SolverTypes.Z3_CE_SOLVER)
-                .collect(Collectors.toList())) {
+                .toList()) {
             solverUnions.add(new SolverTypeCollection(type.getName(), 1, type));
         }
 
